# data_science_project

./: .gitignore  INTRODUCTION.md  README.md  cookiecutter.json
project/: pyproject.toml
project/methods/: main.ipynb
project/package/: __main__.py
project/package/methods/notebooks/: main.ipynb
project/package/results/: __init__.py
tests/: main.ipynb
{{cookiecutter.project_name}}/: pyproject.toml
{{cookiecutter.project_name}}/methods/: main.ipynb
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/methods/notebooks/: main.ipynb
