[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.package_name}}"
dynamic = ["version"]
authors = [
  { name="{{cookiecutter.author_name}}", email="{{cookiecutter.author_email}}" },
]
description = "{{cookiecutter.package_description}}"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "hatch", 
  "ipykernel"
]

[project.urls]
Homepage = "{{cookiecutter.repository_url}}"
Issues = "{{cookiecutter.repository_url}}/issues"

[tool.hatch.version]
path = "__about__.py"

